[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Inventory/Scripts/BTN_InGame_Controller.gd" type="Script" id=1]

[node name="BTN_In_Game" type="Button"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
flat = true
expand_icon = true
script = ExtResource( 1 )

[connection signal="mouse_entered" from="." to="." method="_on_BTN_In_Game_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BTN_In_Game_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_BTN_In_Game_pressed"]
